Comit via VS 2015

--- a/CadeMedico/CadeMedico/Views/Layout.cshtml
+++ b/CadeMedico/CadeMedico/Views/Layout.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Cadê meu medico? - @ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/bootstrap/bootstrap.min.css")"
+    <link href="@Url.Content("~/Content/bootstrap.min.css")"
           rel="stylesheet" />
     <style>
         body {
@@ -35,9 +35,9 @@
     <div class="container">
         @RenderBody()
     </div>
-    <script src="@Url.Content("~/Scripts/jquery-2.0.2.min.js")">
+    <script src="@Url.Content("~/scripts/jquery-2.2.3.min.js")">
     </script>
-    <script src="@Url.Content("~/Scripts/bootstrap.min.js")">
+    <script src="@Url.Content("~/scripts/bootstrap.min.js")">
     </script>
     @RenderSection("script", required: false);
 </body>
